--- a/tensorflow-notebook/config.yaml
+++ b/tensorflow-notebook/config.yaml
@@ -3,5 +3,5 @@ jupyter:
 
 service:
   type: ClusterIP
-  annotations:
-    dev.okteto.com/auto-ingress: "true"
+  #  annotations:
+  #  dev.okteto.com/auto-ingress: "true"
