--- a/tensorflow-notebook/templates/service-tb.yaml
+++ b/tensorflow-notebook/templates/service-tb.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: tb-{{ template "tensorflow-notebook.fullname" . }}
+  name: jn-{{ template "tensorflow-notebook.fullname" . }}
   labels:
     app: {{ template "tensorflow-notebook.name" . }}
     chart: {{ template "tensorflow-notebook.chart" . }}
@@ -14,10 +14,10 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: 6006
-      targetPort: tensorboard
+    - port: 8888
+      targetPort: jupyter
       protocol: TCP
-      name: tensorboard
+      name: jupyter
   selector:
-    app: tb-{{ template "tensorflow-notebook.name" . }}
+    app: {{ template jn-"tensorflow-notebook.name" . }}
     release: {{ .Release.Name }}
