--- a/tensorflow-notebook/templates/service-tb.yaml
+++ b/tensorflow-notebook/templates/service-tb.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jn-{{ template "tensorflow-notebook.fullname" . }}
+  name: {{ include "tensorflow-notebook.fullname" . }}-jn
   labels:
     app: {{ template "tensorflow-notebook.name" . }}
     chart: {{ template "tensorflow-notebook.chart" . }}
@@ -19,5 +19,5 @@ spec:
       protocol: TCP
       name: jupyter
   selector:
-    app: {{ template jn-"tensorflow-notebook.name" . }}
+    app: {{ include "tensorflow-notebook.fullname" . }}-jn
     release: {{ .Release.Name }}
