--- a/tensorflow-notebook/templates/service.yaml
+++ b/tensorflow-notebook/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "tensorflow-notebook.fullname" . }}-tb
+  name: {{ template "tensorflow-notebook.fullname" . }}
   labels:
     app: {{ template "tensorflow-notebook.name" . }}
     chart: {{ template "tensorflow-notebook.chart" . }}
@@ -18,6 +18,10 @@ spec:
       targetPort: tensorboard
       protocol: TCP
       name: tensorboard
+    - port: 8888
+      targetPort: jupyter
+      protocol: TCP
+      name: jupyter
   selector:
-    app: {{ include "tensorflow-notebook.fullname" . }}-tb
+    app: {{ template "tensorflow-notebook.name" . }}
     release: {{ .Release.Name }}
