--- a/tensorflow-notebook/templates/deployment.yaml
+++ b/tensorflow-notebook/templates/deployment.yaml
@@ -57,7 +57,7 @@ spec:
             - tensorboard
           args:
             - --logdir
-            - --path_prefix=/tf
+            - --base_url=/tf
             - /output/training_logs
             - --host
             - 0.0.0.0
