--- a/tensorflow-notebook/templates/ingress.yaml
+++ b/tensorflow-notebook/templates/ingress.yaml
@@ -13,11 +13,11 @@ spec:
   rules:
     - http:
         paths:
-          - path: /
+          - path: /tn
             backend:
               serviceName: {{ include "tensorflow-notebook.fullname" . }}
               servicePort: 8888
-          - path: /tf/
+          - path: /
             backend:
               serviceName: {{ include "tensorflow-notebook.fullname" . }}
               servicePort: 6006
