--- a/tensorflow-notebook/Chart.yaml
+++ b/tensorflow-notebook/Chart.yaml
@@ -3,10 +3,11 @@ description: A Helm chart for tensorflow notebook and tensorboard
 name: tensorflow-notebook
 version: 0.1.3
 appVersion: 1.6.0
+icon: https://apps.okteto.com/tensorflow-notebook
 sources:
   - https://github.com/tensorflow/tensorflow
   - https://github.com/jupyter
 home: https://www.tensorflow.org
 maintainers:
-  - name: cheyang
-    email: cheyang@163.com
+  - name: Okteto
+    email: hello@okteto.com
