--- a/tensorflow-notebook/templates/deployment.yaml
+++ b/tensorflow-notebook/templates/deployment.yaml
@@ -47,6 +47,8 @@ spec:
           volumeMounts:
             - mountPath: /output/training_logs
               name: training-logs-volume
+            - mountPath: /root
+              name: jupyter-notebook-data
         - name: tensorboard
           image: "{{ .Values.tensorboard.image.repository }}:{{ .Values.tensorboard.image.tag }}"
           imagePullPolicy: {{ .Values.tensorboard.image.pullPolicy }}
@@ -74,3 +76,10 @@ spec:
       volumes:
         - name: training-logs-volume
           emptyDir: {}
+        - name: jupyter-notebook-data
+        {{- if .Values.jupyter.persistence.enabled }}
+          persistentVolumeClaim:
+            claimName: {{ .Values.persistence.existingClaim | default (include "wordpress.fullname" .) }}
+        {{- else }}
+          emptyDir: {}
+        {{ end }}
