--- a/tensorflow-notebook/templates/deployment.yaml
+++ b/tensorflow-notebook/templates/deployment.yaml
@@ -73,6 +73,8 @@ spec:
           volumeMounts:
             - mountPath: /output/training_logs
               name: training-logs-volume
+            - mountPath: /root
+              name: jupyter-notebook-data
       volumes:
         - name: training-logs-volume
           emptyDir: {}
