--- a/tensorflow-notebook/templates/deployment.yaml
+++ b/tensorflow-notebook/templates/deployment.yaml
@@ -48,7 +48,7 @@ spec:
           volumeMounts:
             - mountPath: /output/training_logs
               name: training-logs-volume
-            - mountPath: /root
+            - mountPath: /data
               name: jupyter-notebook-data
         - name: tensorboard
           image: "{{ .Values.tensorboard.image.repository }}:{{ .Values.tensorboard.image.tag }}"
