--- a/cert-manager/templates/crds.yaml
+++ b/cert-manager/templates/crds.yaml
@@ -1,5 +1,5 @@
 {{- if (semverCompare ">=1.15-0" .Capabilities.KubeVersion.GitVersion) }}
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: certificaterequests.cert-manager.io
@@ -564,7 +564,7 @@ spec:
                 type: string
                 format: date-time
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: certificates.cert-manager.io
@@ -1775,7 +1775,7 @@ spec:
                   greater than this field."
                 type: integer
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: challenges.acme.cert-manager.io
@@ -6237,7 +6237,7 @@ spec:
                 - expired
                 - errored
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: clusterissuers.cert-manager.io
@@ -12060,7 +12060,7 @@ spec:
                       description: Type of the condition, known values are ('Ready').
                       type: string
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: issuers.cert-manager.io
@@ -17880,7 +17880,7 @@ spec:
                       description: Type of the condition, known values are ('Ready').
                       type: string
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: orders.acme.cert-manager.io
