--- a/cert-manager/Chart.yaml
+++ b/cert-manager/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-appVersion: v0.16.1
+appVersion: v0.7.6
 description: A Helm chart for cert-manager crds
 icon: https://raw.githubusercontent.com/jetstack/cert-manager/master/logo/logo.png
-version: v0.1.2
+version: 0.7.6
 name: cert-manager
