--- a/cert-manager2/Chart.yaml
+++ b/cert-manager2/Chart.yaml
@@ -3,4 +3,4 @@ appVersion: v0.7.6
 description: A Helm chart for cert-manager crds
 icon: https://raw.githubusercontent.com/jetstack/cert-manager/master/logo/logo.png
 version: 0.2.0
-name: cert-manager
+name: cert-manager2
